Fixing desktop version overflowing Adding more information and in a better order

--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -12,6 +12,10 @@ h3 {
   @apply text-2xl font-bold mb-3;
 }
 
+h4 {
+  @apply text-xl font-bold mb-3;
+}
+
 /* Syntax Highlighting*/
 
 body :not(pre) > code[class*="language-"],
